line spacing fix

--- a/apps/portfolio/src/app/testimonies/testimonies.component.scss
+++ b/apps/portfolio/src/app/testimonies/testimonies.component.scss
@@ -72,7 +72,7 @@
 .p-text {
   // font-style: italic;
   line-height: 1.5rem;
-  letter-spacing: 1px;
+  // letter-spacing: 1px;
   padding: 1rem;
   font-size: 1rem;
   background: white;
